feat(JEMIL-6): add Agency Cucumber e2e suite and fix route persistence
Wire Cucumber + Testcontainers for agency registration/list/search flows, align GET security and RouteJpa with the DB schema, and fix listing without a city filter.

Co-authored-by: Cursor <cursoragent@cursor.com>